// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-filter Renders \`create-filter\` with all parameters 1`] = `
<form
  class="v-form"
  novalidate="novalidate"
>
  <div
    class="modal-wrapper"
    close=""
  >
    <div
      class="title"
    >
      <span>
        Create filter title
      </span>
    </div>
    <div
      class="text"
    >
      <patterns-form-stub
        form="[object Object]"
        withalarm="true"
        withentity="true"
        withevent="true"
        withpbehavior="true"
        withtitle="true"
      />
    </div>
    <div
      class="actions"
    >
      <button
        class="v-btn v-btn--text theme--light v-size--default"
        type="button"
      >
        <span
          class="v-btn__content"
        >
        Cancel
        </span>
      </button>
      <button
        class="primary v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default"
        type="submit"
      >
        <span
          class="v-btn__content"
        >
        Submit
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`create-filter Renders \`create-filter\` with empty modal 1`] = `
<form
  class="v-form"
  novalidate="novalidate"
>
  <div
    class="modal-wrapper"
    close=""
  >
    <div
      class="title"
    >
      <span>
        Create filter
      </span>
    </div>
    <div
      class="text"
    >
      <patterns-form-stub
        form="[object Object]"
      />
    </div>
    <div
      class="actions"
    >
      <button
        class="v-btn v-btn--text theme--light v-size--default"
        type="button"
      >
        <span
          class="v-btn__content"
        >
        Cancel
        </span>
      </button>
      <button
        class="primary v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default"
        type="submit"
      >
        <span
          class="v-btn__content"
        >
        Submit
        </span>
      </button>
    </div>
  </div>
</form>
`;
